--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+
 html,
 body {
   padding: 0;
@@ -8,4 +10,9 @@ body {
 
 * {
   box-sizing: border-box;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
 }
