--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Electrolize&family=Titillium+Web&display=swap');
+
 
 
 
